implemented new checkCode operation
